# Salaries-project

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  conftest.py  deploy-stack.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  install_poetry.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-publish-deploy.yml  docker-publish.yml  github-actions-test.yml  main-ci-cd.yml  test-cache.yml
docker/: Dockerfile  entrypoint.sh
docker/app/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  default.conf
frontend_components/: babel.config.js  package-lock.json  package.json  webpack.common.js  webpack.localdev.js  webpack.production.js
frontend_components/local/: index.html  index.js
frontend_components/src/: index.js
playground/amocrm_components/: ApiIterator.py
playground/auth_pages/: apps.py
playground/integrations/: admin.py  apps.py  models.py  urls.py  views.py
playground/playground/: settings.py  urls.py
playground/salaries/: admin.py  models.py  urls.py  views.py
salaries/: ApiIterator.py  admin.py  middlewares.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
salaries/migrations/: 0002_auto_20201119_2303.py  0003_auto_20201119_2304.py  0004_auto_20201119_2305.py  0007_auto_20201119_2306.py  0008_auto_20201120_0120.py  0009_employee_daily_salary_amount.py  0010_employee_one_hour_salary_amount.py  0012_employee_min_call_length.py  0013_setting.py  0015_auto_20211229_1747.py  (+22 more)
src/: .coveragerc  conftest.py  gunicorn.conf.py
(+183 files in other folders)
